# boilerplate-python-fastapi

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: constants.py  db_config.py
controllers/: auth_controller.py  user_controller.py
dtos/: auth_dto.py  base_dto.py  user_dto.py
helper/: api_helper.py  cors_helper.py  db_helper.py  hashing.py  token_helper.py  validation_helper.py
language/: translation.en.json
liquibase/changelog/: changelog.xml
models/: user_model.py
routes/: auth_route.py  user_route.py
